# MatricesLab

./: CMakeLists.txt  LICENSE  README.md
include/: sparse_matrix.h  square_matrix.h  triangular_matrix.h  vector.h
src/: CMakeLists.txt  main.cpp  sparse_matrix.cpp  square_matrix.cpp  triangular_matrix.cpp  vector.cpp
tests/: test-sparsematrix.cpp  test-squarematrix.cpp  test-triangularmatrix.cpp  test-vector.cpp
